Fixed some dutch translations (#158)

--- a/src/web-app/assets/i18n/nl.json
+++ b/src/web-app/assets/i18n/nl.json
@@ -1,20 +1,20 @@
 {
 	"histories.list.item": "",
 	"navbar.button.back": "Terug",
-	"navbar.button.done": "Gedaan",
+	"navbar.button.done": "Klaar",
 	"navbar.categories.choose": "Kies een categorie",
 	"navbar.categories.title": "Categorieën",
 	"navbar.histories.date": "op",
-	"navbar.histories.title": "Historie van {{title}}",
-	"questions.overview.buttons.done": "Gedaan",
+	"navbar.histories.title": "Geschiedenis van {{title}}",
+	"questions.overview.buttons.done": "Klaar",
 	"questions.overview.progress.of": "van",
 	"questions.type.boolean.no": "Nee",
 	"questions.type.boolean.yes": "Ja",
 	"stops.details.address": "Postadres",
-	"stops.details.button.history": "Histories",
+	"stops.details.button.history": "Geschiedenis",
 	"stops.details.button.show-map": "Plaatsen",
-	"stops.details.button.update": "Informeren",
+	"stops.details.button.update": "Bijwerken",
 	"stops.details.served-lines": "Lijnen",
-	"stops.seach-input.aria-label": "Zoekn ...",
+	"stops.seach-input.aria-label": "Zoeken ...",
 	"stops.seach-input.placeholder": "Zoeken naar een stop"
 }
